Remove primitive wrapper class's constructor usage in test class